# telehoot-api

./: .dockerignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  example.env  main.py  pyproject.toml
.github/workflows/: code-quality.yml  tests.yml
deploy/: Dockerfile.prod  entrypoint.sh
src/: config.py  db.py
src/api/v1/: __init__.py
src/api/v1/routers/: __init__.py  test.py
tests/: conftest.py  test_ping.py
